--- a/index.html
+++ b/index.html
@@ -315,21 +315,38 @@
               <h2 style="color: #01BAFD; text-align:center;" >Premier Members </h2>
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
-			<p style="padding-left: 0.5em; padding-bottom: 0.5em; vertical-align: center; line-height: 0.5m font-weight: bold; "> The SONiC Fund supports the activities of the SONiC Foundation. For information or to join the SONiC Fund, please click <span style="color: blue;"><a href="https://enrollment.lfx.linuxfoundation.org/?project=sonicfund"><font color="#6F65F3" >here.</font></a></span> </p>
+			<p style="padding-left: 0.5em; padding-bottom: 0.5em; vertical-align: center; line-height: 0.5m font-weight: bold; text-align:center; "> The SONiC Fund supports the activities of the SONiC Foundation. For information or to join the SONiC Fund, please click <span style="color: blue;"><a href="https://enrollment.lfx.linuxfoundation.org/?project=sonicfund"><font color="#6F65F3" >here.</font></a></span> </p>
              <center><img style="height: auto; text-align:center; width: 80%;" alt="img" src="assets/img/sonic_fund_1.jpg"></center>
 	<!-- End Title -->
 <br>
 <br>
       </div>
     </div>
+			    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+
+              <h2 style="color: #01BAFD; text-align:center;" >General Members </h2>
+              <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
+            </div>
+			<!-- End Title -->
+			<br>
+			<br>
+			<center><img style="height: auto; text-align:center; width: 35%;" alt="img" src="assets/img/sonic_general_1.jpg"></center>
+<br>
+<br>
+      </div>
+    </div>	
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12">
 
-              <h2 style="color: #01BAFD; text-align:center;" >General Members</h2>
+              <h2 style="color: #01BAFD; text-align:center;" >Contributing Organizations </h2>
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
+			<br>
+			<br>
                          <center><img style="height: auto; text-align:center; width: 80%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg"></center>
 
       </div>
