New Platform update for Ragile RA-B6010
New Platform update for Ragile RA-B6010 on supported platform file for html and md file.

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -1139,6 +1139,14 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Ragile</td>
+<td>RA-B6010-48GT4X</td>
+<td class="asic_vendor">Centec</td>
+<td>Centec</td>
+<td>48x1G+4x10G</td>
+<td></td>
+</tr>
+<tr>
 <td>Tencent</td>
 <td>TCS8400-24CC8CD</td>
 <td class="asic_vendor">Broadcom</td>
