Update Arista platforms in supported list

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -446,7 +446,15 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7050QX-32</td>
+<td>CCS-720DT-48S</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3.X2</td>
+<td>48x1G + 4x10G</td>
+<td></td>
+</tr>
+<tr>
+<td>Arista</td>
+<td>DCS-7050QX-32</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Trident 2</td>
 <td>32x40G</td>
@@ -454,7 +462,7 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7050QX-32S</td>
+<td>DCS-7050QX-32S</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Trident 2</td>
 <td>32x40G</td>
@@ -462,7 +470,7 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7050CX3-32S</td>
+<td>DCS-7050CX3-32S</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Trident 3</td>
 <td>32x100G + 2x10G</td>
@@ -470,15 +478,15 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7060CX-32S</td>
+<td>DCS-7060CX-32S</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk</td>
-<td>32x100G</td>
+<td>32x100G + 2x10G</td>
 <td></td>
 </tr>
 <tr>
 <td>Arista</td>
-<td>7060DX4-32</td>
+<td>DCS-7060DX4-32</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 3</td>
 <td>32x400G + 2x10G</td>
@@ -486,7 +494,7 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7060PX4-32</td>
+<td>DCS-7060PX4-32</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 3</td>
 <td>32x400G + 2x10G</td>
@@ -494,7 +502,39 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7170-32CD</td>
+<td>DCS-7060DX5-32</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 4T</td>
+<td>32x400G + 2x10G</td>
+<td></td>
+</tr>
+<tr>
+<td>Arista</td>
+<td>DCS-7060DX5-64</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 4</td>
+<td>32x800G + 2x10G</td>
+<td></td>
+</tr>
+<tr>
+<td>Arista</td>
+<td>DCS-7060PX5-64</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 4</td>
+<td>32x800G + 2x10G</td>
+<td></td>
+</tr>
+<tr>
+<td>Arista</td>
+<td>DCS-7060DX5-64S</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 4</td>
+<td>64x400G + 2x10G</td>
+<td></td>
+</tr>
+<tr>
+<td>Arista</td>
+<td>DCS-7170-32CD</td>
 <td class="asic_vendor">Intel</td>
 <td>Tofino</td>
 <td>32x100G + 2x10G</td>
@@ -502,23 +542,23 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7170-64C</td>
+<td>DCS-7170-64C</td>
 <td class="asic_vendor">Intel</td>
 <td>Tofino</td>
-<td>64x100G</td>
+<td>64x100G + 2x10G</td>
 <td></td>
 </tr>
 <tr>
 <td>Arista</td>
-<td>7260CX3-64</td>
+<td>DCS-7260CX3-64</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 2</td>
-<td>64x100G</td>
+<td>64x100G + 2x10G</td>
 <td></td>
 </tr>
 <tr>
 <td>Arista</td>
-<td>7280CR3-32D4</td>
+<td>DCS-7280CR3-32D4</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Jericho 2</td>
 <td>32x100G + 4x400G</td>
@@ -526,7 +566,7 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Arista</td>
-<td>7280CR3-32P4</td>
+<td>DCS-7280CR3-32P4</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Jericho 2</td>
 <td>32x100G + 4x400G</td>
