Updated 2 new Netberg platform along with Ragile platform
Updated 2 new Netberg platform along with Ragile platform

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -971,6 +971,22 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Netberg </td>
+<td>Aurora 710</td>
+<td class="asic_vendor">Intel</td>
+<td>Tofino BFN-T10-032D</td>
+<td>32x 100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Netberg </td>
+<td>Aurora 750</td>
+<td class="asic_vendor">Intel</td>
+<td>Tofino BFN-T10-064Q</td>
+<td>64x 100G</td>
+<td></td>
+</tr>
+<tr>
 <td>Nvidia</td>
 <td>SN2010</td>
 <td class="asic_vendor">Nvidia</td>
