New Platform update for Ragile RA-B6010 (#1459)
* New Platform update for Ragile RA-B6010

New Platform update for Ragile RA-B6010 on supported platform file for html and md file.

* Updated 2 new Netberg platform along with Ragile platform

Updated 2 new Netberg platform along with Ragile platform

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -1011,6 +1011,22 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Netberg </td>
+<td>Aurora 710</td>
+<td class="asic_vendor">Intel</td>
+<td>Tofino BFN-T10-032D</td>
+<td>32x 100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Netberg </td>
+<td>Aurora 750</td>
+<td class="asic_vendor">Intel</td>
+<td>Tofino BFN-T10-064Q</td>
+<td>64x 100G</td>
+<td></td>
+</tr>
+<tr>
 <td>Nvidia</td>
 <td>SN2010</td>
 <td class="asic_vendor">Nvidia</td>
@@ -1176,6 +1192,14 @@ function Port_Config() {
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 3</td>
 <td>128x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>RA-B6010-48GT4X</td>
+<td class="asic_vendor">Centec</td>
+<td>Centec</td>
+<td>48x1G+4x10G</td>
 <td></td>
 </tr>
 <tr>
