--- a/MoM.html
+++ b/MoM.html
@@ -105,6 +105,31 @@
                     <th style=" text-align: center; ">Links To Minutes Of The meeting</th>
                 </tr>
 <tr>
+                    <td style="">&nbsp;&nbsp;Sep 12 2023 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/446">SONiC Container hardening HLD & SONiC SNMP changes to support IPv6 HLD</a></td>
+		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/451">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Sep 05 2023 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/431">SI Configuration Per Speed & Tx Signal HLD</a></td>
+		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/432">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Aug 29 2023 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/1451">Create_Secureboot_uefi_key_management HLD</a></td>
+		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/430">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Aug 22 2023 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/1446">VRRP Adaptation HLD</a></td>
+		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/409">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Aug 15 2023 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/1416/">Auto-FEC HLD</a></td>
+		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/407">MoM</a></td>
+                    </tr>		
+<tr>
                     <td style="">&nbsp;&nbsp;Aug 08 2023 &nbsp;&nbsp;</td>
                     <td style="text-align: left; "><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/397">No Meeting</a></td>
 		    <td style=""><a href="https://lists.sonicfoundation.dev/g/sonic-dev/message/397">MoM</a></td>
